# PEPITA

./: LICENSE  README.md  exoInfoMatrix.py  information_analysis_results.csv  information_analysis_results_no_limb_darkening.csv  mkdocs.yml  multisector_results.csv  pyproject.toml  requirements.txt  setup.py  tois_with_predictions.csv
data/: README.md  mcmc_fit_results.csv
docs/: README.md  _config.yml
docs/source/: conf.py  index.rst  modules.rst  pepita.rst
docs/source/notebooks/: making_toi_predictions.ipynb
docs/src/pepita/: exoInfoMatrix.md  index.md
notebooks/: README.md
notebooks/.ipynb_checkpoints/: plots.sync-checkpoint.ipynb
notebooks/figures/: exoInfoMatrix.py  plots.sync.ipynb  plots.sync.py
notebooks/figures/.ipynb_checkpoints/: plots.sync-checkpoint.ipynb
notebooks/makingpredictions/: how_to_make_predictions.sync.ipynb  how_to_make_predictions.sync.py
notebooks/makingpredictions/.ipynb_checkpoints/: how_to_make_predictions.sync-checkpoint.ipynb
notebooks/nolimbdarkeningpredictions/: PS_2022.12.01_03.43.54.csv  make_predictions.sync.ipynb  make_predictions.sync.py  results_with_price_predictions.csv  results_with_price_predictions.csv.bkp
notebooks/tois/: backup.bkp.py  exoInfoMatrixTOI.py  final_dataframe.csv  formatted_toi_predictions.csv  improvements_table.tex  long_improvements_table.tex  make_toi_predictions.sync.ipynb  make_toi_predictions.sync.py  nea_tois.csv  tois_with_only_1800s.csv  tois_with_only_1800s_limbdark.csv  tois_with_predictions.csv
pepita/: __init__.py
src/pepita/: __init__.py  exoInfoMatrix.py
(+3 files in other folders)
